--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
 
 #nav {
     display: block;
-    background-color: white;
+    background-color: whitesmoke;
     display: inline-block;
     width: 98vw;
-    border: 3px solid #e64e79;
+    border: 3px solid purple;
     border-radius: 5px;
     margin: 6px;
 }
@@ -24,6 +24,7 @@ body {
 #quizBody {
     text-align: center;
     padding: 10vh;
+    background-color: silver;
 }
 
 h7 {
@@ -42,7 +43,7 @@ button:hover {
 
 button {
     background-color: purple;
-    color: gold;
+    color: white;
     border-radius: 5px;
     border: white;
     padding: 9px 15px 9px 15px;
