--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-.right {
-    float: right;
-}
-
-.left {
-    float: left;
-}
 
 #nav {
     display: block;
@@ -16,12 +9,40 @@
     margin: 6px;
 }
 
-body {
-    font-family: 'Times New Roman', Times, serif;
-    background-color: whitesmoke;
+header {
+    background-color: purple;
 }
 
-#quizBody {
+
+#container {
+
+    background-color: silver;
+
+}
+
+
+body {
+    font-family: 'Times New Roman', Times, serif;
+    background-color:whitesmoke;
+}
+
+button:hover {
+    transition-duration: 0.4s;
+    background-color: yellow;
+}
+
+button {
+    background-color: purple;
+    color: white;
+    border-radius: 5px;
+    border:yellow;
+    padding: 9px 15px 9px 15px;
+    font-size: 12px;
+    font-family: 'Times New Roman', Times, serif;
+    margin: 5px;
+}
+
+#quizMain {
     text-align: center;
     padding: 10vh;
     background-color: silver;
@@ -34,22 +55,13 @@ h7 {
 a {
     text-decoration: none;
     color: black;
+    float: left;
 }
 
-button:hover {
-    transition-duration: 0.4s;
-    background-color: silver;
-}
-
-button {
-    background-color: purple;
-    color: white;
-    border-radius: 5px;
-    border: white;
-    padding: 9px 15px 9px 15px;
-    font-size: 12px;
-    font-family: 'Times New Roman', Times, serif;
-    margin: 5px;
+span {
+    text-decoration: none;
+    color: black;
+    float: right;
 }
 
 #quiz {
